add example internal package
